<resources>
    <string name="framework_empty_str" />
    <string name="framework_activity_not_found">Can not find the activity</string>
    <string name="framework_activity_security">No permission to open the activity</string>
    <string name="framework_just_now">Just now</string>
    <string name="framework_yesterday">Yesterday</string>
    <string name="framework_upgrade_not_enough_storage">Not enough storage</string>
    <string name="framework_ok">OK</string>
    <string name="framework_cancel">Cancel</string>
    <string name="framework_loading">Loading...</string>
    <string name="push_dlg_btn_ok">Sure</string>
    <string name="push_dlg_btn_cancel">Cancel</string>
    <string name="push_dlg_title_download">Download</string>
    <string name="push_dlg_conent_download">Will be download %1$s for you, are you sure continue?</string>
    <string name="auth_back">Back</string>
    <string name="auth_logining">Signing in...</string>
    <string name="auth_failed_no_network">No network</string>
    <string name="auth_failed_network_exception">Network error, cannot connect to server</string>
    <string name="auth_login_failed">Unable to login server</string>
    <string name="auth_login_success">Sign in Success</string>
    <string name="auth_auto_logining">Auto logining</string>
    <string name="auth_loading_code"> Loading… </string>
    <string name="auth_loading_page">AuthLogin</string>
    <string name="auth_login">AuthLogin</string>
    <string name="auth_loading_failed">Network error, Login failed</string>
    <string name="browser_ssl_title">Security warning</string>
    <string name="browser_ssl_msg">There are problems with the security certificate for the site.</string>
    <string name="browser_ssl_continue">Continue</string>
    <string name="browser_btn_confirm">Confirm</string>
    <string name="browser_btn_cancel">Cancel</string>
    <string name="auth_auto_failed">auto register failed</string>
    <string name="config_appstore_title">Treasure Case</string>
    <string name="config_appstore_title_samsung">Recommend</string>
    <string name="stub_name_activity">启动插件ing...</string>
    <string name="stub_name_provider">插件代理服务</string>
    <string name="stub_name_service">插件代理服务</string>
    <string name="service_name_plugin_manager_service">插件管理服务</string>
    <string name="upgrade_dialog_title">New version upgrade</string>
    <string name="upgrade_phone_card_not_exist">upgrade_not_enough_storage</string>
    <string name="launcher_lower_version_tip_title">Kindly note</string>
    <string name="launcher_lower_version_tip_content">As this mobile has a lower version of Android system, there may be some afunction while using. We have kindly provided another version of WiFi Master Key matching your mobile system.</string>
    <string name="launcher_lower_version_tip_download_url">http://www.wifi.com/v3/index.html</string>
    <string name="launcher_verify_msg">这个包是非法包，该产品可能会侵害到您的利益，请去官方(www.wifi.com)下载</string>
    <string name="browser_inputhint">Enter a website URL</string>
    <string name="browser_gobtn">Sign in</string>
    <string name="browser_cancelbtn">Cancel</string>
    <string name="browser_goback">Back</string>
    <string name="browser_goforward">Continue</string>
    <string name="browser_refresh">Refresh</string>
    <string name="browser_share">Share</string>
    <string name="browser_close">Close</string>
    <string name="browser_btn_setting">Settings</string>
    <string name="browser_pop_open">Open</string>
    <string name="browser_pop_open_new">Open in new tab</string>
    <string name="browser_pop_open_back">Open in new background tab</string>
    <string name="browser_pop_share">Share link</string>
    <string name="browser_pop_open_link">Open link</string>
    <string name="browser_pop_open_img">Open image</string>
    <string name="browser_pop_copy_link">Copy link URL</string>
    <string name="browser_pop_save">Save image</string>
    <string name="browser_loaderror">loaderror.html</string>
    <string name="browser_loaderror_explore">loaderror_explore.html</string>
    <string name="browser_btn_back">Back</string>
    <string name="browser_btn_friend">Share with WeChat friends</string>
    <string name="browser_btn_timeline">Share to WeChat Moments</string>
    <string name="browser_btn_favorite">Save</string>
    <string name="browser_btn_refresh">Refresh</string>
    <string name="browser_btn_report">Report</string>
    <string name="browser_btn_copylink">Copy link URL</string>
    <string name="browser_btn_download">Download Management</string>
    <string name="browser_download_no_sdcard">USB storage is required to download%s。</string>
    <string name="browser_download_sdcard_busy">USB storage is busy. Select turn off USB storage in the notification bar to allow downloads.</string>
    <string name="browser_download_success">Download success (Album -> WiFiMasterPic)</string>
    <string name="browser_download_fail">Download failed</string>
    <string name="browser_tab_title">Discover</string>
    <string name="browser_tip_copylink">Website URL has been copied to the clipboard</string>
    <string name="browser_sms_title">Message Prompt</string>
    <string name="browser_sms_tip1">Send message to</string>
    <string name="browser_sms_tip2" />
    <string name="browser_btn_done">Done</string>
    <string name="browser_weixin_tips">WeChat not detected or not support, please check and try again.</string>
    <string name="browser_fav_success">Saved</string>
    <string name="browser_share_success">Shared</string>
    <string name="browser_share_msg">Generating shared content</string>
    <string name="browser_fav_msg">Generating saved content</string>
    <string name="browser_loading_failed">Loading failed, please try again later.</string>
    <string name="browser_download_start">Start to download</string>
    <string name="browser_load_error_text1">The webpage might be hijacked by aliens</string>
    <string name="browser_load_error_text2">Tap to refresh</string>
    <string name="browser_download_file_no_exist">安装包不存在，请重新下载</string>
    <string name="browser_download_app_no_install">该应用尚未安装，请下载安装后重试</string>
    <string name="browser_upload">Upload</string>
    <string name="browser_loading_title">Loading...</string>
    <string name="browser_lower_version_tip_title">Reminder</string>
    <string name="browser_lower_version_tip_content">Your Android system (%s) is an old version, some features may be missing. We recommend you a new version of WiFi Master Key for your phone.</string>
    <string name="settings_title">Mine</string>
    <string name="settings_pref_register_summary">Enjoy one touch backup and recovery of hotspots</string>
    <string name="settings_pref_message_title">Messages</string>
    <string name="settings_pref_level_title">Level</string>
    <string name="settings_pref_backup_ap_title">Hotspot Backup</string>
    <string name="settings_pref_shared_ap_title">Hotspot Sharing Cancellation</string>
    <string name="settings_pref_settings_title">Settings</string>
    <string name="settings_about_title">About</string>
    <string name="settings_pref_app_settings_title">App Settings</string>
    <string name="settings_pref_invite_title">Share with Friends</string>
    <string name="settings_pref_feedback_title">Help &amp; Feedback</string>
    <string name="settings_pref_grade_title">Rate Us</string>
    <string name="settings_pref_follow_weixin_title">Follow Us on WeChat</string>
    <string name="settings_pref_about_title">About WiFi Master Key</string>
    <string name="settings_pref_logout_title">Log out</string>
    <string name="settings_pref_share_auto_title">Auto Share Connected Hotspot</string>
    <string name="settings_pref_backup_auto_title">Auto Backup Connected Hotspot</string>
    <string name="settings_pref_show_icon_notification_title">Show Status Bar Icon Info</string>
    <string name="settings_pref_check_version_startup_title">New Version Notifications</string>
    <string name="settings_pref_new_message_tip_title">New Message Notifications</string>
    <string name="settings_pref_new_message_tip_summary">No notification when turning off</string>
    <string name="settings_pref_new_message_night_tip_title">Do Not Disturb</string>
    <string name="settings_pref_new_message_night_tip_summary">No notification during 22:00PM to 8:00AM when turning on</string>
    <string name="settings_pref_remind_when_quit_title">Remind When Quiting</string>
    <string name="settings_pref_set_default_title">Set as Default WiFi Tool</string>
    <string name="settings_pref_share_auto_summary">Sharing hotspots brings convenience to more people</string>
    <string name="settings_pref_backup_auto_summary">All backup passwords can only be accessed by you and will never be shared</string>
    <string name="settings_pref_product_introduct_title">Product Introduction</string>
    <string name="settings_pref_fqa_title">FAQ</string>
    <string name="settings_pref_ver_check_title">Latest Version</string>
    <string name="settings_block_routine">Rules</string>
    <string name="settings_block_privacy">Privacy</string>
    <string name="settings_block_remind">Reminder</string>
    <string name="settings_pref_plugin_title">Tools</string>
    <string name="settings_pref_insurance_title">WiFi insurance</string>
    <string name="check_setting_changed_repair">Repair done</string>
    <string name="check_setting_changed_complete_configuration">"Have you completed the configuration according to the tutorial guide? "</string>
    <string name="check_setting_changed_view_tutorial">View the tutorial guide again</string>
    <string name="check_setting_changed_repaired">Repaired</string>
    <string name="frg_wifilist_btn_checksetting_wifi">Checking the settings</string>
    <string name="settings_pref_became_ap_owner">Claim Hotspot</string>
    <string name="settings_pref_feedback_title2">Feedback</string>
    <string name="settings_pref_auto_enable_mobile">Auto enable mobile network</string>
    <string name="hotspot_map_new_user_slogan">"Hotspots around the world
please select your country/region"</string>
    <string name="act_setup_tv_i_agree">Experience now means that you agree with</string>
    <string name="act_setup_tv_user_agreement_map">《WiFi Master Key User Agreement》</string>
    <string name="act_setup_btn_onekey">Experience now</string>
    <string name="wifi_ssid">Network SSID</string>
    <string name="wifi_password">Password</string>
    <string name="wifitools_hotspot_openap_name">Please set your ap name</string>
    <string name="credentials_password_too_short">Password should contain at least 8–20 characters.</string>
    <string name="frg_wifilist_btn_refresh_wifi">Continue to refresh</string>
    <string name="wifi_ssid_hint">Enter the SSID</string>
    <string name="wifi_security">Security</string>
    <string name="wifi_backup_password">Backup AP</string>
    <string name="wifi_share_password">Share AP</string>
    <string name="wifi_passwrod_dialog_desc">"Please don't use Hotspot Sharing if you are not the owner of the hotspot or without owner's consent；all transmission and storage of the passwords are performed by 128 bits encryption."</string>
    <string name="wifi_password_dialog_hint">Password</string>
    <string name="go_nearby">walk around to detect WiFi</string>
    <string name="check_loc_permission">"If you can't load WiFi list, please ensure the you have allowed WiFi Master Key to access your location while using in your settings."</string>
    <string name="check_loc_permission_for_new_m">若是安卓6.0系统手机，请在设置里打开GPS后再尝试</string>
    <string name="act_setup_cb_auto_backup">Auto Backup Connected Hotspots</string>
    <string name="act_setup_cb_auto_share">Auto Share Connected Hotspots</string>
    <string name="act_setup_sms_send_tip">It will send an SMS for registration, fees will be charged by operators.</string>
</resources>