<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@null" android:paddingLeft="24.0dip" android:paddingTop="16.0dip" android:paddingRight="24.0dip" android:paddingBottom="24.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/wifi_ssid" />
    <EditText android:id="@id/connect_hotspot_dialog_ssid" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/wifitools_hotspot_openap_name" android:singleLine="true" android:inputType="textNoSuggestions" />
    <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/wifi_password" />
    <EditText android:id="@id/connect_hotspot_dialog_pswd" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/credentials_password_too_short" android:singleLine="true" />
</LinearLayout>