<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="#fff2f2f2" android:layout_width="fill_parent" android:layout_height="300.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:orientation="vertical" android:id="@id/empty_view" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <LinearLayout android:gravity="center" android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerVertical="true">
            <ImageView android:layout_gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:src="@drawable/connect_list_empty" />
            <TextView android:textColor="#ff999999" android:gravity="center_horizontal" android:layout_gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:text="@string/go_nearby" />
            <TextView android:textColor="#ffcccccc" android:gravity="center_horizontal" android:layout_gravity="center_horizontal" android:id="@id/check_permission" android:paddingLeft="48.0dip" android:paddingRight="48.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/check_loc_permission" />
            <TextView android:textColor="#ffcccccc" android:gravity="center_horizontal" android:layout_gravity="center_horizontal" android:paddingLeft="48.0dip" android:paddingRight="48.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/check_loc_permission_for_new_m" />
            <LinearLayout android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="-10.0dip">
                <Button android:textSize="13.0sp" android:textColor="@color/main_blue" android:gravity="center" android:id="@id/frag_wifilist_refreshlist" android:background="@drawable/permission_refresh_background" android:layout_width="113.0dip" android:layout_height="32.0dip" android:layout_marginLeft="15.0dip" android:text="@string/frg_wifilist_btn_refresh_wifi" style="@style/wifi_disabled_text" />
                <Button android:textSize="13.0sp" android:textColor="#ffffffff" android:gravity="center" android:id="@id/frag_wifilist_checksetting" android:background="@drawable/enable_wifi_background" android:layout_width="113.0dip" android:layout_height="32.0dip" android:layout_marginLeft="15.0dip" android:text="@string/frg_wifilist_btn_checksetting_wifi" style="@style/wifi_disabled_text" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>