<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="wrap_content" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:paddingLeft="8.0dip" android:paddingRight="8.0dip" android:paddingBottom="8.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <LinearLayout android:id="@id/type" android:visibility="gone" style="@style/wifi_section">
            <LinearLayout style="@style/wifi_item">
                <TextView android:text="@string/wifi_ssid" style="@style/wifi_item_label" />
                <EditText android:id="@id/ssid" android:hint="@string/wifi_ssid_hint" android:singleLine="true" android:maxLength="32" android:inputType="textNoSuggestions" style="@style/wifi_item_edit_content" />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout android:id="@id/security_fields" android:visibility="gone" style="@style/wifi_section">
            <LinearLayout android:gravity="start" android:orientation="vertical" android:id="@id/password_layout" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="16.0dip" android:layout_marginRight="16.0dip">
                <TextView android:visibility="gone" android:text="@string/wifi_password" style="@style/wifi_item_label" />
                <RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
                    <EditText android:id="@id/password" android:paddingRight="33.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/wifi_password_dialog_hint" android:password="true" android:singleLine="true" />
                    <Button android:id="@id/show_password_button" android:background="@drawable/show_password_button" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
                </RelativeLayout>
            </LinearLayout>
            <LinearLayout android:gravity="start" android:orientation="vertical" android:id="@id/show_password_layout" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="16.0dip" android:layout_marginRight="16.0dip">
                <FrameLayout android:id="@id/share_password_layout" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="18.0dip">
                    <CheckBox android:id="@id/share_password" android:layout_width="fill_parent" android:layout_height="wrap_content" />
                    <TextView android:textSize="@dimen/text_size_small" android:textColor="#ff484a50" android:gravity="left|center" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginLeft="30.0dip" android:text="@string/wifi_share_password" />
                </FrameLayout>
                <FrameLayout android:id="@id/backup_password_layout" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="12.0dip">
                    <CheckBox android:id="@id/backup_password" android:layout_width="fill_parent" android:layout_height="wrap_content" />
                    <TextView android:textSize="@dimen/text_size_small" android:textColor="#ff484a50" android:gravity="left|center" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginLeft="30.0dip" android:text="@string/wifi_backup_password" />
                </FrameLayout>
            </LinearLayout>
            <LinearLayout android:gravity="start" android:orientation="vertical" android:id="@id/show_password_tip_layout" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="16.0dip" android:layout_marginRight="16.0dip" android:layout_marginBottom="18.0dip">
                <FrameLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="12.0dip">
                    <CheckBox android:gravity="top" android:id="@id/share_tip_waring" android:button="@drawable/show_password_tip" style="@style/wifi_item_content" />
                    <TextView android:textSize="@dimen/text_size_xsmall" android:textColor="#ff999999" android:text="@string/wifi_passwrod_dialog_desc" style="@style/wifi_item_checkbox_text" />
                </FrameLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>